@@ -1,5 +1,6 @@
 package com.wooteco.sokdak.post.service;
 
+import static com.wooteco.sokdak.member.domain.RoleType.USER;
 import static com.wooteco.sokdak.util.fixture.MemberFixture.AUTH_INFO;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -7,42 +8,38 @@ import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.springframework.data.domain.Sort.Direction.DESC;
 
 import com.wooteco.sokdak.auth.dto.AuthInfo;
-import com.wooteco.sokdak.comment.dto.CommentResponse;
+import com.wooteco.sokdak.board.domain.Board;
+import com.wooteco.sokdak.board.domain.PostBoard;
+import com.wooteco.sokdak.board.exception.BoardNotFoundException;
+import com.wooteco.sokdak.board.repository.BoardRepository;
+import com.wooteco.sokdak.board.repository.PostBoardRepository;
 import com.wooteco.sokdak.comment.dto.NewCommentRequest;
-import com.wooteco.sokdak.comment.repository.CommentRepository;
 import com.wooteco.sokdak.comment.service.CommentService;
 import com.wooteco.sokdak.member.domain.Member;
+import com.wooteco.sokdak.member.domain.Nickname;
 import com.wooteco.sokdak.member.exception.MemberNotFoundException;
 import com.wooteco.sokdak.member.repository.MemberRepository;
-import com.wooteco.sokdak.post.domain.Hashtag;
 import com.wooteco.sokdak.post.domain.Post;
-import com.wooteco.sokdak.post.domain.PostHashtag;
 import com.wooteco.sokdak.post.dto.NewPostRequest;
 import com.wooteco.sokdak.post.dto.PostDetailResponse;
 import com.wooteco.sokdak.post.dto.PostUpdateRequest;
-import com.wooteco.sokdak.post.dto.PostsElementResponse;
 import com.wooteco.sokdak.post.dto.PostsResponse;
 import com.wooteco.sokdak.post.exception.PostNotFoundException;
-import com.wooteco.sokdak.post.repository.HashtagRepository;
-import com.wooteco.sokdak.post.repository.PostHashtagRepository;
 import com.wooteco.sokdak.post.repository.PostRepository;
+import com.wooteco.sokdak.util.IntegrationTest;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.transaction.annotation.Transactional;
 
-@SpringBootTest
-@Transactional
-class PostServiceTest {
+class PostServiceTest extends IntegrationTest {
+
+    public static final long WRITABLE_BOARD_ID = 2L;
 
     @Autowired
     private PostService postService;
@@ -54,15 +51,17 @@ class PostServiceTest {
     private PostRepository postRepository;
 
     @Autowired
-    private PostHashtagRepository postHashtagRepository;
+    private PostBoardRepository postBoardRepository;
+
+    @Autowired
+    private BoardRepository boardRepository;
 
     @Autowired
     private CommentService commentService;
 
-    @Autowired
-    private HashtagRepository hashtagRepository;
-
     private Post post;
+    private Board board;
+    private PostBoard postBoard;
 
     @BeforeEach
     public void setUp() {
@@ -71,48 +70,60 @@ class PostServiceTest {
         post = Post.builder()
                 .title("제목")
                 .content("본문")
+                .writerNickname(member.getNickname())
                 .member(member)
                 .likes(new ArrayList<>())
+                .comments(new ArrayList<>())
                 .build();
+        board = boardRepository.findById(2L)
+                .orElseThrow(BoardNotFoundException::new);
     }
 
-    @DisplayName("글 작성 기능")
+    @DisplayName("특정 게시판에 익명으로 글 작성 기능")
     @Test
-    void addPost() {
-        NewPostRequest newPostRequest = new NewPostRequest("제목", "본문", Collections.emptyList());
+    void addPost_Anonymous() {
+        NewPostRequest newPostRequest = new NewPostRequest("제목", "본문", true, Collections.emptyList());
 
-        Long postId = postService.addPost(newPostRequest, AUTH_INFO);
+        Long postId = postService.addPost(WRITABLE_BOARD_ID, newPostRequest, AUTH_INFO);
         Post actual = postRepository.findById(postId).orElseThrow();
 
         assertAll(
                 () -> assertThat(actual.getTitle()).isEqualTo(newPostRequest.getTitle()),
                 () -> assertThat(actual.getContent()).isEqualTo(newPostRequest.getContent()),
                 () -> assertThat(actual.getMember().getId()).isEqualTo(1L),
-                () -> assertThat(actual.getCreatedAt()).isNotNull()
+                () -> assertThat(actual.getNickname()).isNotEqualTo(actual.getMember().getNickname()),
+                () -> assertThat(actual.getCreatedAt()).isNotNull(),
+                () -> assertThat(actual.getPostBoards().get(0).getBoard().getTitle()).isNotNull()
         );
     }
 
-    @DisplayName("해시태그가 포함된 게시글 작성 기능")
+    @DisplayName("특정 게시판에 기명으로 글 작성 기능")
     @Test
-    void addPostWithHashtag() {
-        final List<String> expected = List.of("태그1", "태그2");
-        NewPostRequest newPostRequest = new NewPostRequest("제목", "본문", expected);
+    void addPost_Identified() {
+        NewPostRequest newPostRequest = new NewPostRequest("제목", "본문", false, Collections.emptyList());
 
-        Long postId = postService.addPost(newPostRequest, AUTH_INFO);
-        List<PostHashtag> postHashtags = postHashtagRepository.findAllByPostId(postId);
+        Long postId = postService.addPost(WRITABLE_BOARD_ID, newPostRequest, AUTH_INFO);
+        Post actual = postRepository.findById(postId).orElseThrow();
 
-        final List<String> hashtags = postHashtags
-                .stream()
-                .map(PostHashtag::getHashtag)
-                .map(Hashtag::getName)
-                .collect(Collectors.toList());
-        assertThat(hashtags).isEqualTo(expected);
+        assertAll(
+                () -> assertThat(actual.getTitle()).isEqualTo(newPostRequest.getTitle()),
+                () -> assertThat(actual.getContent()).isEqualTo(newPostRequest.getContent()),
+                () -> assertThat(actual.getMember().getId()).isEqualTo(1L),
+                () -> assertThat(actual.getNickname()).isEqualTo(actual.getMember().getNickname()),
+                () -> assertThat(actual.getCreatedAt()).isNotNull(),
+                () -> assertThat(actual.getPostBoards().get(0).getBoard().getTitle()).isNotNull()
+        );
     }
 
     @DisplayName("본인이 작성한 게시글 조회 기능")
     @Test
     void findPost_Session_MyPost() {
         Long savedPostId = postRepository.save(post).getId();
+        postBoard = PostBoard.builder()
+                .post(post)
+                .board(board)
+                .build();
+        postBoardRepository.save(postBoard);
 
         PostDetailResponse response = postService.findPost(savedPostId, AUTH_INFO);
 
@@ -121,24 +132,30 @@ class PostServiceTest {
                 () -> assertThat(response.getContent()).isEqualTo(post.getContent()),
                 () -> assertThat(response.isAuthorized()).isTrue(),
                 () -> assertThat(response.isModified()).isFalse(),
-                () -> assertThat(response.getCreatedAt()).isNotNull()
+                () -> assertThat(response.getCreatedAt()).isNotNull(),
+                () -> assertThat(response.getBoardId()).isEqualTo(postBoard.getBoard().getId())
         );
     }
-
 
     @DisplayName("로그인을 하고, 다른 회원이 작성한 게시글 조회 기능")
     @Test
     void findPost_Session_OtherPost() {
         Long savedPostId = postRepository.save(post).getId();
+        postBoard = PostBoard.builder()
+                .post(post)
+                .board(board)
+                .build();
+        postBoardRepository.save(postBoard);
 
-        PostDetailResponse response = postService.findPost(savedPostId, new AuthInfo(2L));
+        PostDetailResponse response = postService.findPost(savedPostId, new AuthInfo(2L, USER.getName(), "nickname"));
 
         assertAll(
                 () -> assertThat(response.getTitle()).isEqualTo(post.getTitle()),
                 () -> assertThat(response.getContent()).isEqualTo(post.getContent()),
                 () -> assertThat(response.isAuthorized()).isFalse(),
                 () -> assertThat(response.isModified()).isFalse(),
-                () -> assertThat(response.getCreatedAt()).isNotNull()
+                () -> assertThat(response.getCreatedAt()).isNotNull(),
+                () -> assertThat(response.getBoardId()).isEqualTo(postBoard.getBoard().getId())
         );
     }
 
@@ -146,15 +163,21 @@ class PostServiceTest {
     @Test
     void findPost_NoSession() {
         Long savedPostId = postRepository.save(post).getId();
+        postBoard = PostBoard.builder()
+                .post(post)
+                .board(board)
+                .build();
+        postBoardRepository.save(postBoard);
 
-        PostDetailResponse response = postService.findPost(savedPostId, new AuthInfo(null));
+        PostDetailResponse response = postService.findPost(savedPostId, new AuthInfo(null, USER.getName(), "nickname"));
 
         assertAll(
                 () -> assertThat(response.getTitle()).isEqualTo(post.getTitle()),
                 () -> assertThat(response.getContent()).isEqualTo(post.getContent()),
                 () -> assertThat(response.isAuthorized()).isFalse(),
                 () -> assertThat(response.isModified()).isFalse(),
-                () -> assertThat(response.getCreatedAt()).isNotNull()
+                () -> assertThat(response.getCreatedAt()).isNotNull(),
+                () -> assertThat(response.getBoardId()).isEqualTo(postBoard.getBoard().getId())
         );
     }
 
@@ -167,33 +190,24 @@ class PostServiceTest {
                 .isInstanceOf(PostNotFoundException.class);
     }
 
-    @DisplayName("특정 페이지 글 목록 조회 기능")
+    @DisplayName("특정 게시판 게시글 목록 조회 기능")
     @Test
     void findPosts() {
-        Post post2 = Post.builder()
-                .title("제목2")
-                .content("본문2")
-                .likes(new ArrayList<>())
-                .comments(new ArrayList<>())
-                .build();
-        Post post3 = Post.builder()
-                .title("제목3")
-                .content("본문3")
-                .likes(new ArrayList<>())
-                .comments(new ArrayList<>())
-                .build();
-        postRepository.save(post);
-        postRepository.save(post2);
-        postRepository.save(post3);
-        Pageable pageable = PageRequest.of(0, 2, DESC, "createdAt");
+        postService.addPost(board.getId(), new NewPostRequest("제목1", "본문1", false, new ArrayList<>()),
+                new AuthInfo(1L, USER.getName(), "nickname"));
+        postService.addPost(board.getId(), new NewPostRequest("제목2", "본문2", false, new ArrayList<>()),
+                new AuthInfo(1L, USER.getName(), "nickname"));
+        postService.addPost(board.getId(), new NewPostRequest("제목3", "본문3", false, new ArrayList<>()),
+                new AuthInfo(1L, USER.getName(), "nickname"));
 
-        PostsResponse postsResponse = postService.findPosts(pageable);
+        Pageable pageable = PageRequest.of(0, 2, DESC, "createdAt");
+        PostsResponse postsResponse = postService.findPostsByBoard(board.getId(), pageable);
 
         assertAll(
                 () -> assertThat(postsResponse.getPosts()).hasSize(2),
-                () -> assertThat(postsResponse.getPosts()).usingRecursiveComparison()
-                        .ignoringFields("id", "createdAt")
-                        .isEqualTo(List.of(PostsElementResponse.from(post3), PostsElementResponse.from(post2)))
+                () -> assertThat(postsResponse.getPosts())
+                        .extracting("title")
+                        .containsExactly("제목3", "제목2")
         );
     }
 
@@ -218,8 +232,6 @@ class PostServiceTest {
     @DisplayName("게시글 삭제 기능")
     @Test
     void deletePost() {
-        Hashtag hashtag = hashtagRepository.save(new Hashtag("태그1"));
-        PostHashtag postHashtag = postHashtagRepository.save(new PostHashtag(post, hashtag));
         Long postId = postRepository.save(post).getId();
 
         postService.deletePost(postId, AUTH_INFO);
@@ -231,9 +243,9 @@ class PostServiceTest {
     @DisplayName("댓글이 있는 게시글 삭제")
     @Test
     void deletePostWithComment() {
-        Long savedPostId = postRepository.save(post).getId();
+        postRepository.save(post).getId();
         NewCommentRequest newCommentRequest = new NewCommentRequest("댓글", true);
-        Long commentId = commentService.addComment(post.getId(), newCommentRequest, AUTH_INFO);
+        commentService.addComment(post.getId(), newCommentRequest, AUTH_INFO);
 
         postService.deletePost(post.getId(), AUTH_INFO);
 
